cc_library(
	name = "cost",
	hdrs = ["Cost.h"],
	include_prefix = "path_finding",
    visibility = ["//visibility:public"],
)

cc_library(
	name = "state",
	hdrs = ["State.h"],
	include_prefix = "path_finding",
    visibility = ["//visibility:public"],
    deps = [":cost"],
)

cc_library(
	name = "node",
	hdrs = ["Node.h"],
	include_prefix = "path_finding",
    visibility = ["//visibility:public"],
    deps = [":state"],
)
