cc_binary(
	name = "state_example",
	srcs = ["StateExample.cpp"],
    visibility = ["//visibility:public"],
    deps = [
    	"//src:cost",
    	"//src:state",
    ],
)

cc_binary(
	name = "node_example",
	srcs = ["NodeExample.cpp"],
    visibility = ["//visibility:public"],
    deps = [
		"//src:node",
		"//src:state",
    ],
)
